--- a/petstagram/templates/photos/photo-details-page.html
+++ b/petstagram/templates/photos/photo-details-page.html
@@ -12,47 +12,39 @@
                 <div class="userDetails">
 
                     <!-- Link to User Profile Details Page-->
-                    <a href="#">
+                    <a href="{% url 'accounts:details' photo.user.pk %}">
                         <div class="profilepic">
                             <div class="profile_img">
                                 <div class="image">
-                                    <img src="{% static 'images/person.png' %}" alt="img8">
+                                    {% if photo.user.profile.profile_picture %}
+                                        <img src="{{ photo.user.profile.profile_picture }}">
+                                    {% else %}
+                                        <img src="{% static 'images/person.png' %}" alt="Profile Picture">
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
                     </a>
                     <h3>
-
-                        <!-- Link to User Profile Details Page -->
-                        <a href="#">
-                            <!-- IF user has first name and last name -->
-                            Diyan Kalaydzhiev
-                            <!-- else -->
-                            <!-- show user username -->
+                        <a href="{% url 'accounts:details' photo.user.pk %}">
+                            {{ photo.user.get_full_name|default:photo.user.username }}
                         </a>
                         <br>
 
-                        <!-- IF the photo has location --> 
-                        {% if photo.location %} 
-                         <span>{{ photo.location }}</span> 
+                        {% if photo.location %}
+                            <span>{{ photo.location }}</span>
                         {% endif %}
 
-                        <!-- IF the viewer is the creator of the photo -->
+                        {% if request.user == photo.user %}
                         <div class="edit-delete-btns">
-
-                            <!-- Link to Edit Pet Photo Page -->
-                            <a href="{% url 'edit-photo' photo.pk %}">">
-                                <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}"
-                                        alt="edit button">
+                            <a href="{% url 'edit-photo' photo.pk %}">
+                                <img class="edit-img" src="{% static 'images/edit-pen-icon-6.jpg' %}" alt="edit button">
                             </a>
-
-                            <!-- Link to Delete Pet Photo Page -->
                             <a href="{% url 'delete-photo' photo.pk %}">
                                 <img class="bin-img" src="{% static 'images/icon-remove-22.jpg' %}" alt="bin button">
                             </a>
                         </div>
-                        <!-- End IF the viewer is the creator of the photo -->
-
+                        {% endif %}
                     </h3>
                 </div>
                 <!-- End User Details and Image Location Section -->
@@ -61,8 +53,7 @@
 
             <!-- Start Pet Photo -->
             <div class="imgBx" id="place the id of the photo here">
-                <!-- Pet Photo -->
-                <img src="{% static 'images/axolotl.jpeg' %}" alt="post" class="cover">
+                <img src="{{ photo.photo.url }}" alt="post" class="cover">
             </div>
             <!-- End Pet Photo -->
 
@@ -71,54 +62,35 @@
                 <!-- Start Like and Share Buttons Section -->
                 <div class="actionBtns">
                     <div class="left">
-
-                        <!-- Start Like Button -->
                         <span class="heart">
-
-                                <!-- Link to Like Path -->
-                                <a href="{% url 'like' photo.id %}">">
-                                    <!-- if user has liked the photo -->
-                                    {% if photo.like_set.all %} 
-                                    <i class="fa-solid fa-heart" style="color: #ed4040;"></i> 
-                                    <!-- else --> 
-                                    {% else %} 
-                                    <i class="fa-regular fa-heart"></i> 
-                                    {% endif %}
-                                </a>
+                            <a href="{% url 'like' photo.id %}">
+                                {% if user_has_liked %}
+                                    <i class="fa-solid fa-heart" style="color: #ed4040;"></i>
+                                {% else %}
+                                    <i class="fa-regular fa-heart"></i>
+                                {% endif %}
+                            </a>
                         </span>
-                        <!-- End Like Button -->
+                        <a href="{% url 'share' photo.id %}">
+                            <i class="fa-solid fa-share"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- End Like and Share Buttons Section -->
 
-                        <!-- Start Share  Button -->
+                <p class="likes">{{ likes.count }} likes</p>
 
-                        <!-- Link to Share Path --> 
-                        <a href="{% url 'share' photo.id %}"> 
-                            <i class="fa-solid fa-share"></i> 
-                        </a> 
-                    </div> 
-                </div> 
+                {% for pet in photo.tagged_pets.all %}
+                    <a href="{% url 'pet-details' photo.user.username pet.slug %}">
+                        <p class="message">
+                            <b>{{ pet.name }}</b>
+                        </p>
+                    </a>
+                {% endfor %}
 
-                <!-- End Like and Share Buttons Section --> 
+                <p class="pet-details">{{ photo.description }}</p>
+                <h5 class="postTime">{{ photo.created_at|date:"d/m/Y" }}</h5>
 
-                 <!-- Number of Likes for the Photo --> 
-                  <p class="likes">{{ likes.count }} likes</p> 
-                  <!-- Start Tagged Pets Section--> 
-                   {% for pet in photo.tagged_pets.all %} 
-                        <!-- Link to First Tagged Pet Details Page --> 
-                        <a href="{% url 'pet-details' 'username' pet.slug %}"> 
-                                <p class="message"> 
-                                    <b>{{ pet.name }}</b> 
-                                </p> 
-                        </a> 
-                        <!-- End Tagged Pets Section-->
-                   {% endfor %}
-
-                <!-- Photo description -->
-                <p class="pet-details">This is my pet</p>
-
-                <!-- Date of Publication or edit of the Photo -->
-                <h5 class="postTime">19/09/2022</h5>
-
-                <!-- Start Comments Section -->
                 {% for comment in comments %}
                 <div class="comments">
                     <div class="top">
@@ -127,16 +99,14 @@
                                 <div class="profilepic">
                                     <div class="profile_img">
                                         <div class="image">
-                                            <!-- User Profile Image -->
                                             <img src="{% static 'images/person.png' %}" alt="img8">
                                         </div>
                                     </div>
                                 </div>
                                 <p>
-                                    <!-- Link to User Profile Details Page-->
-                                    <!-- User First and/or Last Name or username-->
-                                    <a href="">Steven Ivanov</a>
-                                    <!-- User Comment -->
+                                    <a href="{% url 'accounts:details' comment.user.pk %}">
+                                        {{ comment.user.get_full_name|default:comment.user.username }}
+                                    </a>
                                     {{ comment.text }}
                                 </p>
                             </div>
@@ -144,24 +114,16 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Comments Section -->
                 {% endfor %}
             </div>
 
-            <!-- Start Add Comments Section -->
             <div class="addComments">
-
-                <!-- Start Add Comments Form -->
                 <form method="post" action="{% url 'comment' photo.id %}">
                     {% csrf_token %}
                     {{ comment_form }}
-                    <!-- Post Comments Button -->
                     <button type="submit">Post</button>
                 </form>
-                <!-- End Add Comments Form -->
-
             </div>
-            <!-- End Add Comments Section -->
 
         </div>
         <!-- End Pet Photo Post Section -->
